删除了没有urlname字段的文章……

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ language:
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://zhanghuimeng.github.io/blog-example
 root: /blog-example/
-permalink: :title/
+permalink: :urlname/
 permalink_defaults:
 
 # Directory
