--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.8.0"
+    "version": "3.7.1"
   },
   "dependencies": {
     "hexo": "^3.3.0",
@@ -24,6 +24,7 @@
     "hexo-renderer-less": "^0.2.0",
     "hexo-renderer-markdown-it": "^3.4.1",
     "hexo-renderer-stylus": "^0.3.0",
+    "hexo-sage-posts": "0.0.1",
     "hexo-server": "^0.2.0"
   }
 }
